@@ -606,6 +606,11 @@
         <version>2.0.1</version>
       </dependency>
       <dependency>
+        <groupId>org.netpreserve</groupId>
+        <artifactId>jwarc</artifactId>
+        <version>0.17.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.ops4j.base</groupId>
         <artifactId>ops4j-base-lang</artifactId>
         <version>${ops4j.version}</version>
