@@ -68,6 +68,7 @@
     <module>tika-parser-miscoffice-module</module>
     <module>tika-parser-news-module</module>
     <module>tika-parser-crypto-module</module>
+    <module>tika-parser-webarchive-module</module>
   </modules>
   <build>
     <pluginManagement>
